--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lukman Afandi | Codevector</title>
+    <title>Lukman Afandi | Codevector _ Portolio Website</title>
     <script type="module" crossorigin src="/assets/index.44557ec6.js"></script>
     <link rel="stylesheet" href="/assets/index.8bfa52a2.css">
   </head>
