--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lukman Afandi | Codevector _ Portolio Website</title>
-    <script type="module" crossorigin src="/assets/index.44557ec6.js"></script>
-    <link rel="stylesheet" href="/assets/index.8bfa52a2.css">
+    <title>Lukman Afandi | Codevector</title>
+    <script type="module" crossorigin src="/assets/index.19733221.js"></script>
+    <link rel="stylesheet" href="/assets/index.af1ad507.css">
   </head>
   <body>
     <div id="root"></div>
