--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lukman Afandi | Codevector</title>
-    <script type="module" crossorigin src="/assets/index.19733221.js"></script>
-    <link rel="stylesheet" href="/assets/index.af1ad507.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lukman Afandi | Codevector</title>
+  <script type="module" crossorigin src="/assets/index.fbb02aac.js"></script>
+  <link rel="stylesheet" href="/assets/index.b9f36537.css">
+</head>
+
+<body>
+  <div id="root"></div>
+  
+</body>
+
 </html>
